force-app/main/default/objects/Attack__c/Attack__c.object-meta.xml
<CustomObject>
    <label>Attack</label>
    <nameField>
        <label>Attack Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>