force-app/main/default/objects/Attack__c/fields/Attack_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Attack_Bonus__c</fullName>
    <label>Attack Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>