force-app/main/default/objects/Attack__c/fields/Attack_Name__c.field-meta.xml
<CustomField>
    <fullName>Attack_Name__c</fullName>
    <label>Attack Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>