force-app/main/default/objects/Attack__c/fields/CSheet__c.field-meta.xml
<CustomField>
    <fullName>CSheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSheet</label>
    <referenceTo>CSheet__c</referenceTo>
    <relationshipLabel>Attacks</relationshipLabel>
    <relationshipName>Attacks</relationshipName>
    <type>Lookup</type>
</CustomField>