force-app/main/default/objects/Attack__c/fields/Damage__c.field-meta.xml
<CustomField>
    <fullName>Damage__c</fullName>
    <label>Damage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>